# EasyChemML

./: .gitignore  README.md  setup.py
.github/workflows/: rust.yml
EasyChemML/: Environment.py
EasyChemML/DataImport/: DataImporter.py
EasyChemML/Encoder/: BertTokenizer.py  DEPR_EvoFP.py  DRFPEncoder.py  EasyDescriptor.py  EvoFP.py  FingerprintEncoder.py  MFF.py  OnehotEncoder.py  RandomFeatureEncoder.py  __init__.py
EasyChemML/Metrik/: MetricEnum.py  MetricStack.py  MetricsList.py
EasyChemML/Model/: CatBoost_c.py  CatBoost_r.py  PytorchModelExecute.py  scikit_RandomForestClassifier.py  (+1 more)
EasyChemML/Utilities/DataUtilities/RustBatchsystem/: Cargo.toml  python_MergeSort.py  setup_rust.py  test_BatchSort_Radix.py  test_Batchsystem.py  tst_BatchSort_Radix.py
EasyChemML/Utilities/DataUtilities/RustBatchsystem/pyRustBatchsystem/: __init__.py
EasyChemML/Utilities/DataUtilities/RustBatchsystem/pyWrapper/: RustBatchListFunctions_duplicates.py  RustBatchSorter_Radix.py  RustBatchholder.py
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/benches/: my_benchmark.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/: lib.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/BatchFunctions/: BatchListFunctions_duplicates.rs  BatchSort.rs  mod.rs  py_BatchListFunctions_duplicates.rs  py_BatchSort.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/BatchSystem/: BatchHolder.rs  mod.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/BatchSystem/BatchTablesImplementation/: BatchTable.rs  BatchTable_FileSystem.rs  BatchTable_InMemory.rs  mod.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/BatchSystem/BatchTablesImplementation/DataSerializing/: Serializer.rs  mod.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/BatchSystem/BatchTablesImplementation/DataSerializing/Modules/: flexbuffers.rs  json_serde.rs  mod.rs  postcard.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/BatchSystem/PythonInterfaces/: DType_Converter.rs  mod.rs  py_rustBatchHolder.rs  py_rustBatchTable.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/Utilities/: array_helper.rs  mod.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/: Lipophilicity.csv  fingerprint_evolution.rs  fitness_functions.rs  get_data.rs  mod.rs  population.rs  primitives.rs  smarts_fingerprint.rs  test.py  utilities.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/chem_datasets/: Dreher_and_Doyle_input_data.csv  HIV_classify.csv  HIV_classify_8000.csv  Lipophilicity.csv  csv_import.rs  mod.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/fingerprint_evolution/: fingerprint_inheritance.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/fitness_functions/: fitness_metrics.rs  fitness_models.rs  single_dataset_fitness.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/population/: member.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/primitives/: primitive_property.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/python_interface/: configuration.rs  data_processing.rs  evo_fingerprint.rs  mod.rs  smarts_fingerprint.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/src/impl_evo_fp/smarts_fingerprint/: smarts.rs  smarts_pattern.rs
EasyChemML/Utilities/DataUtilities/RustBatchsystem/rustBatchsystem/test/: test_batchlistfunctions.rs  test_batchsystem.rs  test_merge_sort.rs
Examples/: README.md
(+202 files in other folders)
