[package]
name = "pyRustBatchsystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyRustBatchsystem"
crate-type = ["cdylib", "lib"]
path = "rustBatchsystem/src/lib.rs"

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json  = "1.0.89"
postcard = {version = "1.0.2", features=["alloc"]}
numpy = "0.20.0"
rand = "0.8.5"
rayon = "1.5.3"
glob = "0.3.0"
ndarray = { version = "0.15.4", features = ["rayon", "std", "serde"] }
digest = "0.10.3"
sha2 = "0.10.2"
hex = "0.4.3"
kdam = "0.3.0"
lz4 = "1.24.0"
flexbuffers = "2.0.0"
fake = "2.5.0"
itertools = "0.12.0"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.50"
rdkit  = { path = "../../../../../rdkit" }
linfa = "0.7.0"
num = "0.4.1"
bincode = "1.3.3"
tempfile = "3.9.0"
walkdir = "2.4.0"


[dependencies.ndarray-npy]
version = "0.8.1"
default-features = false
features = ["num-complex-0_4", "npz"]

[dependencies.pyo3]
version = "0.20.0"
features = ["auto-initialize", "serde","hashbrown","eyre","anyhow"]

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]



